--- a/webapp/front/front/src/app/modules/product-detail/product-detail.component.html
+++ b/webapp/front/front/src/app/modules/product-detail/product-detail.component.html
@@ -13,8 +13,7 @@
             <div id="center-grid" class="column-center pl-3">
                 <!-- Replace with a component or code block for upperMarketplaceButtons -->
                 <!-- <app-upper-marketplace-buttons></app-upper-marketplace-buttons> -->
-                <app-upper-marketplace-buttons [channel]="channel" [departmentList]="departmentList"
-                    [departmentName]="departmentName"></app-upper-marketplace-buttons>
+                <app-upper-marketplace-buttons [channel]="channel"></app-upper-marketplace-buttons>
 
 
                 <div class="cool-static-container w-100 p-0">
@@ -55,8 +54,8 @@
                                     <span class="font-weight-normal font-size-16 f-r-sb-c w-100">
                                         <span>{{ product?.used ? 'Used' : 'New' }}</span>
 
-                                        <div class="department-tag" (click)="goToDepartment()">
-                                            {{ product?.department }}
+                                        <div class="department-tag" (click)="goToDepartment(product?.department)">
+                                            {{ product?.department.displayName }}
                                         </div>
                                     </span>
 
@@ -66,16 +65,21 @@
                                     </h1>
                                     <div class="f-r-c-c g-0">
                                         <span class="price font-size-30 font-weight-normal">
-                                            {{ (product?.price ? (product.price | currency:
-                                            'ARS':'symbol':'1.0-2').split(',')[0] : '') }}
+                                            {{ product?.price ? (product.price | currency:
+                                            'ARS':'symbol':'1.0-2').split(',')[0] : '' }}
                                         </span>
                                         <div class="f-c-s-c pl-1" style="height: 26px">
                                             <span class="cents c-light-text font-size-20 font-weight-normal">
-                                                {{ product?.price ? ',' + (product.price | currency:
-                                                'ARS':'symbol':'1.0-2').split(',')[1] : '' }}
+                                                {{
+                                                product?.price
+                                                ? ',' + ((product.price | currency:
+                                                'ARS':'symbol':'1.0-2').split(',')[1] || '00')
+                                                : ''
+                                                }}
                                             </span>
                                         </div>
                                     </div>
+
 
 
                                     <div class="f-c-s-s w-100 mt-3 g-05">
@@ -95,7 +99,7 @@
                                     </ng-container>
                                     <ng-template #editListing>
                                         <!-- If same user, show edit link -->
-                                        <a [routerLink]="['/marketplace/products', department, product?.self, 'edit']"
+                                        <a [routerLink]="['/marketplace/products' ,product?.self,  'edit']"
                                             class="mt-4 w-100 cool-button marketplace-button pure filled-interesting square-radius font-size-14 font-weight-bold">
                                             <i class="fa-solid fa-pen-to-square"></i> Edit listing
                                         </a>
@@ -420,6 +424,7 @@
     </div>
 
 
-    <app-wave-footer></app-wave-footer>
 
 </div>
+
+<app-wave-footer [isMarketplace]="true"></app-wave-footer>
