--- a/webapp/front/front/src/app/components/user-profile-widget/user-profile-widget.component.html
+++ b/webapp/front/front/src/app/components/user-profile-widget/user-profile-widget.component.html
@@ -1,6 +1,6 @@
-<div class="grey-container" style="width: 200px;" (click)="navigateToProfile()">
+<div class="grey-container profile-widget" style="width: 200px" (click)="navigateToProfile()">
   <div class="row">
-    <div class="col-4 f-c-c-c pr-2">
+    <div class="col-4 f-c-c-c pe-2">
       <div style="display: flex; justify-content: center; align-items: center;">
         <img class="big-profile-picture" style="width: 40px; height: 40px;" [src]="profileImageSafeUrl"
           alt="User profile image" />
