--- a/webapp/front/front/src/app/modules/marketplace/marketplace/marketplace.component.html
+++ b/webapp/front/front/src/app/modules/marketplace/marketplace/marketplace.component.html
@@ -8,7 +8,7 @@
         <app-left-column></app-left-column>
       </div>
 
-      <div id="center-grid" class="column-center pl-3">
+      <div id="center-grid" class="column-center ps-3">
         <div style="position: relative">
           <!-- Upper Marketplace Buttons Component -->
           <app-upper-marketplace-buttons [channel]="channel">
