--- a/webapp/front/front/src/app/modules/marketplace/product-sell/product-sell.component.html
+++ b/webapp/front/front/src/app/modules/marketplace/product-sell/product-sell.component.html
@@ -7,7 +7,7 @@
                 <app-left-column></app-left-column>
             </div>
 
-            <div id="center-grid" class="column-center pl-3">
+            <div id="center-grid" class="column-center ps-3">
                 <app-upper-marketplace-buttons [channel]="channel"></app-upper-marketplace-buttons>
 
                 <div class="cool-static-container w-100">
