--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -17,7 +17,7 @@
 
 
       </div>
-      <div class="col-md-11 pt-3 pb-3 pr-3 col-md-push-11">
+      <div class="col-md-11 pt-3 pb-3 pe-3 col-md-push-11">
         <a [routerLink]="['/post', post.self]" [queryParams]="{ SPAInChannel: this.SPAInChannel}"
           style="text-decoration: none;">
           <div class="post-header">
@@ -27,7 +27,7 @@
                   class="small-profile-picture" alt="profile_picture_img" />
 
 
-                <span class="post-author pt-1 pb-1 pl-1">{{post.author.email}}</span>
+                <span class="post-author pt-1 pb-1 ps-1">{{post.author.email}}</span>
 
               </div>
 
