--- a/webapp/front/front/src/app/components/post-card/post-card.component.html
+++ b/webapp/front/front/src/app/components/post-card/post-card.component.html
@@ -7,7 +7,7 @@
                     <span style="font-size: 14px" class="font-weight-bold">
                         {{ post.channel }}
                     </span>
-                    <span style="font-size: 12px; font-weight: normal" class="ml-1">
+                    <span style="font-size: 12px; font-weight: normal" class="ms-1">
                         - Posted by
                         <img [src]="authorImageSafeUrl" class="small-profile-picture mb-1" alt="post_profile_image" />
                         {{ post.author.name }}
@@ -35,17 +35,17 @@
     <!-- Like and Tags section -->
     <div class="row">
         <div class="col-6">
-            <div class="ml-2 d-flex flex-column justify-content-start align-items-start">
+            <div class="ms-2 d-flex flex-column justify-content-start align-items-start">
                 <div class="f-r-c-c">
-                    <span (click)="toggleLike()" class="post-like-button pl-3 pr-3 pt-2 pb-2" [class.liked]="isLiked">
-                        <span class="mr-1">{{ post.likeCount }}</span>
+                    <span (click)="toggleLike()" class="post-like-button ps-3 pe-3 pt-2 pb-2" [class.liked]="isLiked">
+                        <span class="me-1">{{ post.likeCount }}</span>
                         <i class="fa-solid fa-thumbs-up"></i>
                     </span>
                 </div>
             </div>
         </div>
         <div class="col-6">
-            <div class="mr-2">
+            <div class="me-2">
                 <div class="w-100 d-flex flex-row justify-content-end align-items-center flex-wrap"
                     *ngIf="tags.length > 0">
                     <a *ngFor="let tag of tags" class="post-tag static m-l-3 m-r-3" [routerLink]="['/posts']"
