--- a/webapp/front/front/src/app/components/upper-feed-buttons/upper-feed-buttons.component.html
+++ b/webapp/front/front/src/app/components/upper-feed-buttons/upper-feed-buttons.component.html
@@ -10,19 +10,19 @@
     <!-- Trending Button -->
     <a (click)="changeStatusToTrending()" class="cool-feed-button rounded"
       [ngClass]="{ 'active': statusClass === 'Trending' }">
-      <i class="fa-solid fa-arrow-trend-up ml-1"></i>
+      <i class="fa-solid fa-arrow-trend-up ms-1"></i>
       <span i18n>Trending</span>
     </a>
 
     <!-- Hot Button -->
     <a (click)="changeStatusToHot()" class="coolest-button " [ngClass]="{ 'active': statusClass === 'Hot' }">
-      <i class="fa-solid fa-fire ml-1"></i>
+      <i class="fa-solid fa-fire ms-1"></i>
       <span i18n>Hot</span>
     </a>
   </div>
 
   <div *ngIf="currentUser.userRole !== 'ADMINISTRATOR' && channelClass !== 'Announcements'">
-    <button (click)="publishInChannel()" class="cool-feed-button p-3">
+    <button (click)="publishInChannel()" class="cool-feed-button ">
       <i class="fa-solid fa-plus"></i>
 
       <ng-container [ngSwitch]="channelClass">
