--- a/webapp/front/front/src/app/components/upper-marketplace-buttons/upper-marketplace-buttons.component.html
+++ b/webapp/front/front/src/app/components/upper-marketplace-buttons/upper-marketplace-buttons.component.html
@@ -1,35 +1,42 @@
 <div class="w-100" style="position: relative; z-index: 2">
     <div class="upper-feed-buttons-box w-100">
         <div class="f-r-c-c g-05">
+            <!-- Filters Marketplace -->
             <div class="f-r-s-c filters-marketplace g-05">
+                <!-- Marketplace -->
                 <a [routerLink]="['/marketplace']" class="cool-feed-button rounded marketplace-button"
                     [ngClass]="{'active': channel === 'Marketplace'}">
                     <span class="font-size-12">
-                        <i class="fas fa-shopping-cart"></i>
+                        <i class="fa-solid fa-shopping-cart"></i>
                         <span class="hide-text">Marketplace</span>
                     </span>
                 </a>
 
+                <!-- Buyer and Seller Hub Links -->
                 <div class="f-r-s-c sub-filters g-05">
-                    <a [routerLink]="['/marketplace/currently-requesting']"
+                    <!-- Buyer Hub -->
+                    <a [routerLink]="['/marketplace/buyer-hub', 'requests']"
                         class="cool-feed-button rounded marketplace-button"
-                        [ngClass]="{'active': channel === 'MyPurchases' || channel === 'CurrentlyRequesting'}">
+                        [ngClass]="{'active': channel.startsWith('BuyerHub')}">
                         <span class="font-size-12">
                             <i class="fa-solid fa-bag-shopping hide-icons"></i>
-                            <span class="hide-text">Buyer hub</span>
+                            <span class="hide-text">Buyer Dashboard</span>
                         </span>
                     </a>
 
-                    <a [routerLink]="['/marketplace/my-listings']" class="cool-feed-button rounded marketplace-button"
-                        [ngClass]="{'active': channel === 'MyListings' || channel === 'MySales'}">
+                    <!-- Seller Hub -->
+                    <a [routerLink]="['/marketplace/seller-hub','listings']"
+                        class="cool-feed-button rounded marketplace-button"
+                        [ngClass]="{'active': channel.startsWith('SellerHub')}">
                         <span class="font-size-12">
                             <i class="fa-solid fa-tags"></i>
-                            <span class="hide-text">Seller hub</span>
+                            <span class="hide-text">Seller Dashboard</span>
                         </span>
                     </a>
                 </div>
             </div>
 
+            <!-- Department Filters -->
             <div *ngIf="channel === 'Marketplace'">
                 <div class="custom-dropdown">
                     <div class="dropdown-toggle" id="department-toggle">
@@ -49,6 +56,7 @@
             </div>
         </div>
 
+        <!-- Create Listing Button -->
         <a [routerLink]="['/marketplace/create-listing']"
             class="cool-feed-button p-3 marketplace-button square font-size-16 font-weight-bold"
             [ngClass]="{'active': channel === 'Sell'}">
