--- a/webapp/front/front/src/assets/styles/home.css
+++ b/webapp/front/front/src/assets/styles/home.css
@@ -244,6 +244,19 @@
     }
   }
 
+  .fa-regular,
+  .fa-solid {
+    margin-right: 0.4em;
+    /* Add space between icon and text */
+    vertical-align: middle;
+    /* Align icon with text baseline */
+  }
+
+  .text-label {
+    vertical-align: middle;
+    /* Ensure text aligns with icon */
+  }
+
   &:hover,
   &:active,
   &:focus-visible {
@@ -390,6 +403,19 @@
       transition: all 0.5s;
     }
 
+    .fa-regular,
+    .fa-solid {
+      margin-right: 0.4em;
+      /* Add space between icon and text */
+      vertical-align: middle;
+      /* Align icon with text baseline */
+    }
+
+    .text-label {
+      vertical-align: middle;
+      /* Ensure text aligns with icon */
+    }
+
     &:hover {
       border: 1px solid transparent;
       background-color: var(--error);
@@ -405,7 +431,6 @@
 
 
   }
-
 
 }
 
@@ -2343,6 +2368,9 @@ h6 {
   box-shadow: -3px 5px 0 0 var(--lighttext);
 }
 
+.profile-widget {
+  border-radius: 30px 15px 15px 30px;
+}
 
 /*---------------------------------Amenities -----------------------*/
 
@@ -2387,7 +2415,7 @@ h6 {
     transform: scale(1.1);
   }
 
-  & .pl-3 .pr-3 .pt-2 .pb-2 :hover {
+  & .pl-3 .pe-3 .pt-2 .pb-2 :hover {
     transform: scale(1.1);
 
   }
@@ -3436,6 +3464,22 @@ input[type=time] {
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
+.dialog {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  /* Darker background for better focus on the popup */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  /* Subtle blur effect for modern look */
+  backdrop-filter: blur(5px);
+}
+
 .show-dialog {
   position: fixed;
   top: 0;
@@ -3453,21 +3497,6 @@ input[type=time] {
   visibility: visible;
 }
 
-.dialog {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  /* Darker background for better focus on the popup */
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-  /* Subtle blur effect for modern look */
-  backdrop-filter: blur(5px);
-}
 
 .dialog.show-dialog {
   display: flex;
@@ -3572,4 +3601,29 @@ input[type=time] {
 .toast-content {
   display: flex;
   align-items: center;
+}
+
+
+
+/* .-------------- */
+
+.bubble-row {
+  display: flex;
+  align-items: center;
+  /* Vertically center items */
+  gap: 1rem;
+  /* Space between the SVG and the text */
+}
+
+.bubble-svg {
+  flex-shrink: 0;
+  /* Prevent it from shrinking */
+  width: 150px;
+  /* Or any fixed/relative sizing you prefer */
+  height: auto;
+}
+
+.bubble-text {
+  flex: 1;
+  /* Let text take remaining space */
 }
